# oxideav-tiff

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: lzw.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs
src/: ccitt.rs  compress.rs  container.rs  decoder.rs  encoder.rs  error.rs  ifd.rs  image.rs  jpeg.rs  jpeg_old.rs  lib.rs  metadata.rs  registry.rs  types.rs  webp.rs
tests/: container_metadata.rs  decode_ccitt_fixtures.rs  decode_cielab.rs  decode_cmyk_planar.rs  decode_extra_samples.rs  decode_format_info.rs  decode_fuzz_regressions.rs  decode_icc_xmp.rs  decode_icc_xmp_fixtures.rs  decode_imagemagick_fixtures.rs  decode_metadata.rs  decode_metadata_hostile.rs  decode_metadata_multipage.rs  decode_oldstyle_jpeg.rs  decode_orientation.rs  decode_planar_config.rs  decode_predictor_float.rs  decode_resolution_unit.rs  decode_sample_format.rs  decode_sample_format_float.rs  decode_sample_format_float_rgb.rs  decode_sample_format_signed.rs  decode_subfile_type.rs  decode_tiled_roundtrip.rs  decode_tiled_subbyte.rs  decode_ycbcr_planar.rs  decode_ycbcr_subsampled_tiled.rs  decode_zstd_fixtures.rs  encode_bigtiff.rs  encode_ccitt_2d_roundtrip.rs  encode_cielab_roundtrip.rs  encode_cmyk_roundtrip.rs  encode_extras_roundtrip.rs  encode_f16_roundtrip.rs  encode_icc_xmp_roundtrip.rs  encode_imagemagick_validators.rs  encode_metadata_roundtrip.rs  encode_predictor_float.rs  encode_rgb48_roundtrip.rs  encode_rgba_extrasamples.rs  (+11 more)
tests/data/icc_xmp/: icc_xmp_gray16.tif  icc_xmp_gray16_big.tif  packet.xmp  profile.icc
tests/data/webp50001/: ref_rgb_lossless.tif  ref_rgb_lossy.tif  ref_rgb_strips.tif  ref_rgb_tiled.tif  ref_rgba_lossless.tif
