[package]
name = "oxideav-tiff"
version = "0.0.6"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-tiff"
homepage = "https://github.com/OxideAV/oxideav-tiff"
authors = ["Mark Karpeles"]
description = "Pure-Rust TIFF 6.0 image decoder + encoder + container for oxideav (None/CCITT-MH/CCITT-T4-1D/CCITT-T4-2D/CCITT-T6-G4/PackBits/LZW/Deflate/ZSTD-50000/WebP-50001/JPEG-in-TIFF-7; 1/4/8/16-bit; bilevel/gray/palette/RGB/CMYK/YCbCr; BigTIFF; tiles; multi-page)"
readme = "README.md"
keywords = ["multimedia", "image", "tiff", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# image-library consumers can depend on `oxideav-tiff` with
# `default-features = false` and avoid the framework dependency tree
# entirely. Without `registry` the crate exposes a free-standing
# `decode_tiff` API plus local `TiffImage` / `TiffError` types and
# never references `oxideav-core`.
oxideav-core = { version = "0.1", optional = true }
# `oxideav-mjpeg` is the foundational JPEG codec for the workspace and
# is the only way to decode Compression=7 (TIFF Tech Note 2 JPEG-in-TIFF)
# strips/tiles, each of which is itself a complete ISO JPEG datastream.
# Gated behind `registry` because we reach JPEG through mjpeg's
# `Decoder` trait surface (which depends on `oxideav-core`); without
# `registry`, Compression=7 yields a precise "feature gated" error
# rather than dragging both crates into a default-features=false build.
oxideav-mjpeg = { version = "0.1", optional = true }
# `compcol` (Karpelès Lab's compression collection, the workspace-wide
# choice for byte-stream codecs) supplies both general-purpose
# compressors the TIFF wire format needs: the RFC 1950 zlib stream for
# Compression=8 (Adobe Deflate) and the RFC 8478 Zstandard frame for
# the Compression=50000 extension. `default-features = false` keeps
# the dependency to exactly those two algorithms.
compcol = { version = "0.6", default-features = false, features = [
    "zlib",
    "zstd",
] }
# `oxideav-webp` is the workspace's WebP codec and the only way to
# decode / encode Compression=50001 (WebP-in-TIFF, the de-facto
# registry extension paired with Compression=50000 — see
# `docs/image/tiff/tiff-zstd-compression-50000.md` §1), where each
# strip / tile payload is one complete WebP file. Pulled in with
# `default-features = false` so it does NOT drag `oxideav-core` into
# the standalone (`default-features = false`) build of this crate:
# the WebP lossless (VP8L) encode + both-flavour (VP8 / VP8L) decode
# entry points we consume are part of its framework-free surface.
# Not optional — Compression=50001 works in every build configuration,
# exactly like Compression=50000 (Zstandard) does.
oxideav-webp = { version = "0.2", default-features = false }

[features]
default = ["registry"]

# Wires up the `Decoder` trait implementation, the TIFF container
# demuxer + probe, and the `register_codecs` / `register_containers`
# entry points against `oxideav-core` so the crate can plug into the
# `oxideav` framework registry. Default-on; turn off for image-library
# use-cases that just want the standalone `decode_tiff` API.
#
# Also pulls in `oxideav-mjpeg` so that Compression=7 (JPEG-in-TIFF
# per TIFF Tech Note 2) strips/tiles can be decoded through the
# workspace's JPEG codec; without this feature the JPEG-in-TIFF path
# returns `Error::Unsupported` rather than a silent fallback.
registry = ["dep:oxideav-core", "dep:oxideav-mjpeg"]

[dev-dependencies]
# Round 129 (depth-mode benchmarks): Criterion drives the `lzw` bench
# harness that A/B-measures the LZW encoder hot path
# (`compress::pack_lzw`). Pinned to the same 0.5 line the other
# OxideAV crates with benches (flac, tta, magicyuv, h264, pixfmt,
# bmp) already track so cross-codec numbers stay comparable.
criterion = "0.5"

# Round 129 LZW encoder bench. Self-contained — every fixture is
# synthesised in-bench from a deterministic xorshift seed (no
# committed payload files, no `docs/` reads, no external library
# calls). Run with:
#     cargo bench -p oxideav-tiff --bench lzw
[[bench]]
name = "lzw"
harness = false
